admin/src/components/routes/ActionWrapper/Action.css
/* ... */
.action .fullscreenTransformation .outputPanel .outputPlaceholder {
	color: var(--sl-color-neutral-200);
	padding: 20px;
	text-align: center;
}

.action .fullscreenTransformation .outputPanel .outputPlaceholder sl-icon {
	font-size: 40px;
	color: var(--sl-color-neutral-400);
}

.action .fullscreenTransformation .outputPanel .outputPlaceholder .outputPlaceholderText {
	display: block;
	max-width: 280px;
	margin: 10px auto 0 auto;
	color: var(--sl-color-neutral-500);
}

.action .fullscreenTransformation .rightPanel {
	position: relative;
	overflow: auto;
	max-height: 100%;
}

.action .fullscreenTransformation .editorPanel {
	position: relative;
	height: 100%;
}

.action .fullscreenTransformation .editorPanel .transformation-box {
	border-radius: 0;
	box-shadow: none;
	border: 0;
}

.action .fullscreenTransformation .editorPanel .transformation-box__header {
	background-color: var(--bg-gray);
	border-radius: 0;
	height: 60px;
	border-top: 1px solid var(--border-primary);
	border-bottom: 2px solid var(--border-primary);
	position: sticky;
	top: 0;
	left: 0;
	z-index: 10;
}

.action .fullscreenTransformation .editorPanel .transformation-box__header-title {
	transition: opacity 0s;
	opacity: 1;
}

.action .transformation-box.is-fullscreen-animating .transformation-box__header-title {
	transition: opacity 0.2s;
	opacity: 0;
}

.action .fullscreenTransformation .editorPanel .editorWrapper {
	border-radius: 0;
	border: 0 !important;
	height: 100%;
	position: relative;
	box-shadow: none !important;
}

.action .fullscreenTransformation .editorPanel .editorWrapper .editor {
	height: 100% !important;
}

.action .matchingProperties {
	display: grid;
	grid-template-columns: 1fr 100px 1fr;
	gap: 20px;
	align-items: center;
	justify-content: center;
}

.action .matchingProperties sl-input::part(form-control-label) {
	font-size: 13px;
}

.action .matchingProperties .equal {
	display: flex;
	justify-content: center;
	align-items: end;
	height: 100%;
	font-size: 30px;
	position: relative;
	right: 1px;
}

.action .queryButtons,
.action .fileButtons {
	margin-top: 44px;
	display: flex;
	gap: 15px;
}

.action .pathInputWrapper {
	position: relative;
	margin-bottom: 20px;
}

.action .completePath,
.action .completePathError {
	position: absolute;
	left: 5px;
	font-family: monospace;
	font-size: 13px;
	margin-top: 8px;
	opacity: 0;
	transition: opacity 0.3s;
}

.action .completePath.visible,
.action .completePathError.visible {
	opacity: 1;
}

.action .completePathError {
	color: var(--sl-color-danger-500);
}

.action .sheetsSelectWrapper {
	display: flex;
	align-items: end;
	justify-content: space-between;
	gap: 20px;
}

.action .sheetsSelect {
	margin-top: 20px;
	width: 100%;
}

.action .sheetsSelect.hideListbox::part(listbox) {
	display: none;
}

.action .sheetsSelectWrapper sl-button {
	min-width: 150px;
}

.action .sheetsError {
	font-size: 13px;
	color: var(--sl-color-danger-500);
	margin-top: 3px;
	font-weight: 600;
}

.action .setSchemaFirst {
	text-align: center;
	font-weight: 600;
}

.action .previewDrawer .grid {
	height: 100%;
	display: block;
}

.action .previewDrawer::part(panel) {
	padding-top: 40px !important;
}

.action .previewDrawer::part(title) {
	padding-top: 0 !important;
	padding-bottom: 0 !important;
	line-height: 2;
}

.action sl-drawer sl-spinner {
	display: block;
	margin: auto;
	margin-top: 50px !important;
}

